Fix homepage links

--- a/vignettes/articles/reconstruct_multi_patterns.Rmd
+++ b/vignettes/articles/reconstruct_multi_patterns.Rmd
@@ -4,7 +4,7 @@ author: ""
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{How to reconstruct multiple patterns}
+  %\VignetteIndexEntry{Multi-trait point pattern reconstruction of plant ecosystems}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
