--- a/vignettes/articles/reconstruct_multi_patterns.Rmd
+++ b/vignettes/articles/reconstruct_multi_patterns.Rmd
@@ -16,16 +16,16 @@ editor_options:
 If you want more information about multi-trait point pattern reconstruction, please refer to the [corresponding paper](https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.14206
 ).
 
-If you wish to include several marks simultaneously in a reconstruction, you can
-use the following code. The libraries used must first be loaded.
+If you wish to include several marks simultaneously in a reconstruction, you can use the following code. The libraries used must first be loaded.
 
 ```{r message = FALSE, warning = FALSE}
 library(shar)
 library(spatstat)
 ```
 
-The next step is to load the point pattern, here is an example of a random point
-pattern with several marks to show the structure of the data used.
+> Please note that the maximum number of iterations has been set to `max_steps = 10000` and `n_repetitions = 1`/`n_repetitions = 3` to keep computational time low for this example. For real-world applications, it is advisable to raise these values. Additionally, we set `verbose = FALSE` in the vignette to minimize printed output. We recommend using the default setting `verbose = TRUE` when executing the code to view progress reports.
+
+The next step is to load the point pattern, here is an example of a random point pattern with several marks to show the structure of the data used.
 
 ```{r}
 xr <- 500
@@ -39,49 +39,28 @@ random <- data.frame(x = x, y = y, dbh = diameter, species = factor(species))
 marked_pattern <- as.ppp(random, W = owin(c(0, xr), c(0, yr)))    
 ```
 
-The point pattern must contain the following data An x and y coordinate, a 
-metric mark (in metres) and a nominal mark defined as a factor. The order must
-be respected. Now the reconstruction with several marks can be started with the 
-following code. Note that the maximum number of iterations has been set to 
-max_steps = 10000 to keep the computation time for this example to a minimum. 
-For an application, this value should be increased according to the number of 
-points in the pattern.
+The point pattern must contain the following data An x and y coordinate, a metric mark (in metres) and a nominal mark defined as a factor. The order must be respected. Now the reconstruction with several marks can be started with the following code. Note that the maximum number of iterations has been set to max_steps = 10000 to keep the computation time for this example to a minimum. For an application, this value should be increased according to the number of points in the pattern.
 
 ```{r}
-reconstruction <- reconstruct_pattern_multi(
-marked_pattern, 
-n_repetitions = 1,
-max_steps = 10000)
+reconstruction <- reconstruct_pattern_multi(marked_pattern, n_repetitions = 1, max_steps = 10000, 
+                                            verbose = FALSE)
 ```
 
-As a result, you will receive a list containing a variety of information, for 
-example, the reference pattern, the reconstructed pattern, the number of 
-successful actions, the energy development and much more. If you wish to 
-perform several reconstructions of the same reference pattern, you must 
-increase n_repetitions to the desired number.
+As a result, you will receive a list containing a variety of information, for example, the reference pattern, the reconstructed pattern, the number of successful actions, the energy development and much more. If you wish to perform several reconstructions of the same reference pattern, you must increase n_repetitions to the desired number.
 
 ```{r}
-reconstruction_2 <- reconstruct_pattern_multi(
-marked_pattern, 
-n_repetitions = 2,
-max_steps = 10000)
+reconstruction_2 <- reconstruct_pattern_multi(marked_pattern, n_repetitions = 3, max_steps = 10000, 
+                                              verbose = FALSE)
 ```
 
-To activate a visualisation of the reconstruction that shows the changes in the 
-pattern at the relevant time, you must proceed as follows.
+To activate a visualisation of the reconstruction that shows the changes in the pattern at the relevant time, you must proceed as follows.
 
 ```{r}
-reconstruction_3 <- reconstruct_pattern_multi(
-marked_pattern, 
-n_repetitions = 1,
-max_steps = 10000, 
-plot = TRUE)
+reconstruction_3 <- reconstruct_pattern_multi(marked_pattern, n_repetitions = 1, max_steps = 10000, plot = TRUE, 
+                                              verbose = FALSE)
 ```
 
-Finally, you can use the following function to view different summary statistics
-of the reference pattern (black line) compared to the reconstructed pattern 
-(grey line).  For this, however, the listed libraries must be loaded 
-additionally.
+Finally, you can use the following function to view different summary statistics of the reference pattern (black line) compared to the reconstructed pattern (grey line).  For this, however, the listed libraries must be loaded additionally.
 
 ```{r}
 plot(reconstruction)
