--- a/README.Rmd
+++ b/README.Rmd
@@ -18,12 +18,11 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 
 README Last updated: `r Sys.Date()`
-
 | CI | Development | CRAN | License |
 |----|-------------|------|---------|
 | [![R-CMD-check](https://github.com/r-spatialecology/shar/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/r-spatialecology/shar/actions/workflows/R-CMD-check.yaml) | [![Project Status](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active) | [![CRAN status](https://www.r-pkg.org/badges/version/shar)](https://cran.r-project.org/package=shar) | [![DOI](https://img.shields.io/badge/JOSS-10.21105/joss.03811-yellow.svg)](https://doi.org/10.21105/joss.03811) |
 [![Codecov test coverage](https://codecov.io/gh/r-spatialecology/shar/graph/badge.svg)](https://app.codecov.io/gh/r-spatialecology/shar) | [![Lifecycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable) | [![CRAN logs](https://cranlogs.r-pkg.org/badges/grand-total/shar)](http://cran.rstudio.com/web/packages/shar/index.html) | [![License](https://img.shields.io/badge/License-GPLv3-blue.svg)](https://www.gnu.org/licenses/gpl-3.0) |
-
+[![Codecov test coverage](https://codecov.io/gh/r-spatialecology/shar/graph/badge.svg)](https://app.codecov.io/gh/r-spatialecology/shar)
 <!-- badges: end -->
 
 **S**pecies-**h**abitat **a**ssociations in **R** provides a toolset of functions in the `R` programming language to analyze species-habitat associations. Therefore, information about the location of the species (as a point pattern) and the environmental conditions (as a raster) is needed. In order to analyse the data for significant habitat associations either the location data or the environmental data is randomized *n*-times. Then, counts within the habitats are compared between the observed and the randomized data. Positive or negative associations are present if the observed counts are higher or lower than the randomized counts (using quantile thresholds). Methods are described in Plotkin et al. (2000), Harms et al. (2001) and Wiegand & Moloney (2014). **shar** is mainly based on the [`spatstat`](http://spatstat.org) (Baddeley et al. 2015) and [`terra`](https://rspatial.org/terra/) (Hijmans 2022) package.
